# otobo-znuny-python-client

./: .gitignore  AGENTS.md  OTOBO.yml  README.md  mariadb.py  mkdocs.yml  pyproject.toml  pytest.ini  sitecustomize.py  ticket-history.json  tox.ini  update_example.py
.github/workflows/: ci.yml  workflow.yml
docs/: OpenTicketAI (1).yml  OpenTicketAI (2).yml  class-diagram-cli.puml  class-diagram-overview.puml  class-diagram.puml  getting-started-otobo.md  getting-started-znuny.md  getting-started.de.md  getting-started.en.md  index.md  interactive-installation-setup.md  library-overview.md  migration.md
docs/_data/: OpenTicketAI.yml
domain_models/: __init__.py  otobo_client_config.py  ticket_operation.py
dotenv/: __init__.py
extras/: OTOBO.yml  OpenTicketAI.yml  OpenTicketAI_Znuny_Webservice.yml  ai-webservice.yml  ai-webservice2.yml  creating_otobo_indexes.sql  getting_started.py  setup_webservices.py
otobo/: client_config_models.py  otobo_client.py  otobo_errors.py
otobo/models/: request_models.py  response_models.py  ticket_models.py
otobo/tests/: client_usage.py  test_client.py  test_client_integration.py
scripts/: __init__.py  bootstrap.py  migrate_to_core.py  setup_webservices.py  webservice_util.py
src/otobo/: __init__.py  mappers.py  otobo_client.py  otobo_errors.py
src/otobo/cli/: __init__.py  environments.py
src/otobo/client/: otobo_client.py
src/otobo/clients/: otobo_client.py
src/otobo/domain_models/: basic_auth_model.py  otobo_client_config.py  ticket_models.py  ticket_operation.py
src/otobo/models/: base_models.py  client_config_models.py  request_models.py  response_models.py  ticket_models.py
src/otobo/otobo.egg-info/: PKG-INFO  SOURCES.txt
src/otobo/scripts/: cli_interface.py  getting_started.py  setup_webservices.py  webservice_util.py
src/otobo/util/: http_method.py  webservice_config.py
src/otobo_znuny/: mappers.py
src/otobo_znuny.egg-info/: PKG-INFO  requires.txt
src/otobo_znuny/cli/: __init__.py  app.py  command_models.py  environments.py  interface.py  otobo_command_runner.py  otobo_console.py
src/otobo_znuny/clients/: otobo_client.py
src/otobo_znuny/domain_models/: basic_auth_model.py  otobo_client_config.py  ticket_models.py  ticket_operation.py
src/otobo_znuny/models/: base_models.py  request_models.py  response_models.py  ticket_models.py
src/otobo_znuny/scripts/: __init__.py  cli_interface.py  getting_started.py  setup_webservices.py  webservice_util.py
src/otobo_znuny/setup/: __init__.py  bootstrap.py  config.py
src/otobo_znuny/setup/webservices/: __init__.py  builder.py  generator.py  operations.py  utils.py  webservice_config.py  webservice_models.py
src/otobo_znuny/util/: otobo_errors.py  safe_base_model.py  webservice_config.py
src/otobo_znuny_python_client/: __init__.py  mappers.py
src/otobo_znuny_python_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/otobo_znuny_python_client/cli/: __init__.py  app.py  command_models.py  environments.py  interface.py  otobo_command_runner.py  otobo_console.py  webservice_factory.py
src/otobo_znuny_python_client/clients/: otobo_client.py
src/otobo_znuny_python_client/domain_models/: basic_auth_model.py  otobo_client_config.py  ticket_models.py  ticket_operation.py
src/otobo_znuny_python_client/models/: __init__.py  base_models.py  request_models.py  response_models.py  ticket_models.py
src/otobo_znuny_python_client/scripts/: __init__.py  cli_interface.py  getting_started.py  setup_webservices.py  webservice_util.py
src/otobo_znuny_python_client/setup/: __init__.py  bootstrap.py  config.py
src/otobo_znuny_python_client/setup/webservices/: __init__.py  builder.py  generator.py  operations.py  utils.py  webservice_config.py  webservice_models.py
src/otobo_znuny_python_client/util/: safe_base_model.py
src/otrs_gi_core/: __init__.py  mappers.py
src/otrs_gi_core/cli/: app_factory.py  command_models.py  command_runner.py  environments.py  system_console.py
src/otrs_gi_core/clients/: generic_interface_client.py
src/otrs_gi_core/domain_models/: basic_auth_model.py  client_config.py
src/otrs_gi_core/models/: base_models.py  request_models.py  response_models.py  ticket_models.py
src/otrs_gi_core/setup/: bootstrap.py  config.py
src/otrs_gi_core/setup/webservices/: __init__.py  builder.py  operations.py  utils.py  webservice_config.py  webservice_models.py
src/otrs_gi_core/util/: errors.py
src/znuny/: __init__.py
src/znuny/cli/: __init__.py  environments.py
tests/: __init__.py  client_usage.py  conftest.py  datasets.py  factories.py  mariadb.py  otobo_entity.py  otobo_priorities.py  otobo_queues.py  otobo_state.py  otobo_type.py  pytest.ini  test_client.py  test_mappers.py  ticket-response.json  update_example.py
tests/e2e/: client_usage.py  conftest.py  demo_system_env  test_client_config_models.py  test_client_integration.py  test_demo_env  test_security.py  test_ticket_create.py  test_ticket_search.py  test_tickt_update.py
tests/e2e/demo_system/: otobo_entity.py  otobo_priorities.py  otobo_queues.py  otobo_state.py  otobo_type.py
tests/e2e/local_test_system/: setup_local_test_system.py
tests/e2e/local_test_system/otobo-docker/: compose.yml  quick-setup.sh
tests/e2e/local_test_system/tmp/: OpenTicketAI_mbbtlcwj.yml  OpenTicketAI_ptpoqtwq.yml
tests/unit/: test_branded_sdks.py  test_cli_app.py  test_mappers.py  test_otobo_client.py  test_ticket_operations.py  test_webservice_builder.py
tests/unit/scripts/: test_cli_interface.py  test_getting_started.py  test_setup_webservices.py
