[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otobo-znuny"
version = "2.0.0"
description = "Python SDKs for OTOBO and Znuny GenericInterface REST APIs"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Tobias Bück", email = "tab@softoft.de" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.27,<0.29",
    "pydantic>=2.11.3,<3",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.28,<3",
    "typer>=0.13.1,<0.20",
    "zxcvbn>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "mariadb>=1.1.13",
    "mypy>=1.18.2",
    "ruff>=0.13.1",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]
otobo = []
znuny = []

[project.scripts]
otobo-cli = "otobo.cli:run"
znuny-cli = "znuny.cli:run"

[project.urls]
homepage = "https://github.com/Softoft-GmbH/otobo-znuny-python-client"
documentation = "https://github.com/Softoft-GmbH/otobo-znuny-python-client"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "mariadb>=1.1.13",
    "mypy>=1.18.2",
    "ruff>=0.13.1",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]

[tool.mypy]
python_version = "3.13"
strict = true

[mypy-mariadb]
ignore_missing_imports = true

[mypy-zxcvbn]
ignore_missing_imports = true
